tests/reference/asr-elemental_01-b58df26.stderr
semantic error: 'f64[101]' object does not support item assignment
  --> tests/../integration_tests/elemental_01.py:63:9
   |
63 |         array_a[i] = float(i)
   |         ^^^^^^^^^^^^^^^^^^^^^ 
